deploy/k8s/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: omada-controller
  namespace: networking
  labels:
    app: omada-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: omada-controller
          image: mbentley/omada-controller:3.2-amd64
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8043
              protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: omada-controller
  namespace: networking
  labels:
    app: omada-controller
spec:
  selector:
    app: omada-controller
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8043
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: omada-controller
  namespace: networking
  labels:
    app: omada-controller
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "omada-controller.k8s.lan:8043"
spec:
  ingressClassName: nginx-private
  rules:
    - host: "omada-controller.k8s.lan"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: omada-controller
                port:
                  number: 8043
